--- a/bldc_servo_driver_g4_cpp.ioc
+++ b/bldc_servo_driver_g4_cpp.ioc
@@ -136,7 +136,43 @@ Dma.Request0=I2C3_RX
 Dma.Request1=I2C3_TX
 Dma.Request2=ADC1
 Dma.Request3=ADC2
-Dma.RequestsNb=4
+Dma.Request4=USART1_RX
+Dma.Request5=USART1_TX
+Dma.RequestsNb=6
+Dma.USART1_RX.4.Direction=DMA_PERIPH_TO_MEMORY
+Dma.USART1_RX.4.EventEnable=DISABLE
+Dma.USART1_RX.4.Instance=DMA1_Channel3
+Dma.USART1_RX.4.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART1_RX.4.MemInc=DMA_MINC_ENABLE
+Dma.USART1_RX.4.Mode=DMA_CIRCULAR
+Dma.USART1_RX.4.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART1_RX.4.PeriphInc=DMA_PINC_DISABLE
+Dma.USART1_RX.4.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.USART1_RX.4.Priority=DMA_PRIORITY_HIGH
+Dma.USART1_RX.4.RequestNumber=1
+Dma.USART1_RX.4.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.USART1_RX.4.SignalID=NONE
+Dma.USART1_RX.4.SyncEnable=DISABLE
+Dma.USART1_RX.4.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.USART1_RX.4.SyncRequestNumber=1
+Dma.USART1_RX.4.SyncSignalID=NONE
+Dma.USART1_TX.5.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART1_TX.5.EventEnable=DISABLE
+Dma.USART1_TX.5.Instance=DMA1_Channel4
+Dma.USART1_TX.5.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART1_TX.5.MemInc=DMA_MINC_ENABLE
+Dma.USART1_TX.5.Mode=DMA_NORMAL
+Dma.USART1_TX.5.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART1_TX.5.PeriphInc=DMA_PINC_DISABLE
+Dma.USART1_TX.5.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.USART1_TX.5.Priority=DMA_PRIORITY_HIGH
+Dma.USART1_TX.5.RequestNumber=1
+Dma.USART1_TX.5.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.USART1_TX.5.SignalID=NONE
+Dma.USART1_TX.5.SyncEnable=DISABLE
+Dma.USART1_TX.5.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.USART1_TX.5.SyncRequestNumber=1
+Dma.USART1_TX.5.SyncSignalID=NONE
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C3.I2C_Speed_Mode=I2C_Fast
@@ -146,25 +182,26 @@ KeepUserPlacement=false
 Mcu.Family=STM32G4
 Mcu.IP0=ADC1
 Mcu.IP1=ADC2
-Mcu.IP10=RCC
-Mcu.IP11=SPI3
-Mcu.IP12=SYS
-Mcu.IP13=TIM1
-Mcu.IP14=TIM2
-Mcu.IP15=TIM4
-Mcu.IP16=TIM6
-Mcu.IP17=TIM7
-Mcu.IP18=TIM17
-Mcu.IP19=USART1
+Mcu.IP10=OPAMP3
+Mcu.IP11=RCC
+Mcu.IP12=SPI3
+Mcu.IP13=SYS
+Mcu.IP14=TIM1
+Mcu.IP15=TIM2
+Mcu.IP16=TIM4
+Mcu.IP17=TIM6
+Mcu.IP18=TIM7
+Mcu.IP19=TIM17
 Mcu.IP2=CORDIC
+Mcu.IP20=USART1
 Mcu.IP3=DAC1
 Mcu.IP4=DMA
-Mcu.IP5=I2C3
-Mcu.IP6=NVIC
-Mcu.IP7=OPAMP1
-Mcu.IP8=OPAMP2
-Mcu.IP9=OPAMP3
-Mcu.IPNb=20
+Mcu.IP5=FDCAN1
+Mcu.IP6=I2C3
+Mcu.IP7=NVIC
+Mcu.IP8=OPAMP1
+Mcu.IP9=OPAMP2
+Mcu.IPNb=21
 Mcu.Name=STM32G431V(6-8-B)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PC13
@@ -234,6 +271,7 @@ MxDb.Version=DB.6.0.30
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.DMA1_Channel1_IRQn=true\:6\:0\:true\:false\:true\:false\:true
 NVIC.DMA1_Channel2_IRQn=true\:6\:0\:true\:false\:true\:false\:true
+NVIC.DMA1_Channel4_IRQn=true\:5\:0\:true\:false\:true\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.ForceEnableDMAVector=false
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -256,8 +294,10 @@ PA10.Locked=true
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
 PA11.Locked=true
+PA11.Mode=FDCAN_Activate
 PA11.Signal=FDCAN1_RX
 PA12.Locked=true
+PA12.Mode=FDCAN_Activate
 PA12.Signal=FDCAN1_TX
 PA13.Locked=true
 PA13.Mode=Serial_Wire
@@ -400,7 +440,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-LL-true,2-SystemClock_Config-RCC-false-LL-false,3-MX_ADC1_Init-ADC1-false-LL-true,4-MX_ADC2_Init-ADC2-false-LL-true,5-MX_DAC1_Init-DAC1-false-LL-true,6-MX_I2C3_Init-I2C3-false-LL-true,7-MX_OPAMP1_Init-OPAMP1-false-LL-true,8-MX_OPAMP2_Init-OPAMP2-false-LL-true,9-MX_OPAMP3_Init-OPAMP3-false-LL-true,10-MX_SPI3_Init-SPI3-false-LL-true,11-MX_TIM1_Init-TIM1-false-LL-true,12-MX_TIM4_Init-TIM4-false-LL-true,13-MX_TIM17_Init-TIM17-false-LL-true,14-MX_DMA_Init-DMA-false-LL-true,15-MX_USART1_UART_Init-USART1-false-LL-true,16-MX_CORDIC_Init-CORDIC-false-LL-true,17-MX_TIM2_Init-TIM2-false-LL-true,18-MX_TIM6_Init-TIM6-false-LL-true,19-MX_TIM7_Init-TIM7-false-LL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-LL-true,2-SystemClock_Config-RCC-false-LL-false,3-MX_ADC1_Init-ADC1-false-LL-true,4-MX_ADC2_Init-ADC2-false-LL-true,5-MX_DAC1_Init-DAC1-false-LL-true,6-MX_I2C3_Init-I2C3-false-LL-true,7-MX_OPAMP1_Init-OPAMP1-false-LL-true,8-MX_OPAMP2_Init-OPAMP2-false-LL-true,9-MX_OPAMP3_Init-OPAMP3-false-LL-true,10-MX_SPI3_Init-SPI3-false-LL-true,11-MX_TIM1_Init-TIM1-false-LL-true,12-MX_TIM4_Init-TIM4-false-LL-true,13-MX_TIM17_Init-TIM17-false-LL-true,14-MX_DMA_Init-DMA-false-LL-true,15-MX_USART1_UART_Init-USART1-false-LL-true,16-MX_CORDIC_Init-CORDIC-false-LL-true,17-MX_TIM2_Init-TIM2-false-LL-true,18-MX_TIM6_Init-TIM6-false-LL-true,19-MX_TIM7_Init-TIM7-false-LL-true,20-MX_FDCAN1_Init-FDCAN1-false-HAL-true
 RCC.ADC12CLockSelection=RCC_ADC12CLKSOURCE_PLL
 RCC.ADC12Freq_Value=42500000
 RCC.AHBFreq_Value=170000000
