--- a/bldc_servo_driver_g4_cpp.ioc
+++ b/bldc_servo_driver_g4_cpp.ioc
@@ -271,7 +271,6 @@ MxDb.Version=DB.6.0.30
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.DMA1_Channel1_IRQn=true\:6\:0\:true\:false\:true\:false\:true
 NVIC.DMA1_Channel2_IRQn=true\:6\:0\:true\:false\:true\:false\:true
-NVIC.DMA1_Channel4_IRQn=true\:5\:0\:true\:false\:true\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.ForceEnableDMAVector=false
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -282,7 +281,8 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.TIM6_DAC_IRQn=true\:8\:0\:true\:false\:true\:true\:true
-NVIC.TIM7_IRQn=true\:2\:0\:true\:false\:true\:true\:true
+NVIC.TIM7_IRQn=true\:3\:0\:true\:false\:true\:true\:true
+NVIC.USART1_IRQn=true\:2\:0\:true\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA0.Locked=true
 PA0.Mode=IN1-Single-Ended
