--- a/bldc_servo_driver_g4_cpp.ioc
+++ b/bldc_servo_driver_g4_cpp.ioc
@@ -280,6 +280,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.TIM4_IRQn=true\:2\:0\:true\:false\:true\:true\:true
 NVIC.TIM6_DAC_IRQn=true\:8\:0\:true\:false\:true\:true\:true
 NVIC.TIM7_IRQn=true\:3\:0\:true\:false\:true\:true\:true
 NVIC.USART1_IRQn=true\:2\:0\:true\:false\:true\:true\:true
