feat : 6step drive

--- a/bldc_servo_driver_g4_cpp.ioc
+++ b/bldc_servo_driver_g4_cpp.ioc
@@ -175,9 +175,10 @@ Dma.USART1_TX.5.SyncRequestNumber=1
 Dma.USART1_TX.5.SyncSignalID=NONE
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
+I2C3.Analog_Filter=I2C_ANALOGFILTER_DISABLE
 I2C3.I2C_Speed_Mode=I2C_Fast
-I2C3.IPParameters=I2C_Speed_Mode,Timing
-I2C3.Timing=0x0010061A
+I2C3.IPParameters=I2C_Speed_Mode,Timing,Analog_Filter
+I2C3.Timing=0x0010071B
 KeepUserPlacement=false
 Mcu.Family=STM32G4
 Mcu.IP0=ADC1
@@ -400,7 +401,9 @@ PE15.GPIOParameters=GPIO_PuPd
 PE15.GPIO_PuPd=GPIO_PULLUP
 PE15.Locked=true
 PE15.Signal=GPIO_Input
+PE7.GPIOParameters=PinState
 PE7.Locked=true
+PE7.PinState=GPIO_PIN_SET
 PE7.Signal=GPIO_Output
 PE8.Locked=true
 PE8.Mode=PWM Generation1 CH1 CH1N
